@@ -1,7 +1,9 @@
 DIST cnijfilter-common-2.70-2.src.rpm 7410286 RMD160 28d240ad53f58dbf8a5889a2fded9ff6cd21d3e5 SHA1 e19dc96ac8e19589d92fecf175d37f14af366508 SHA256 0f9cc935050517890c0cda692d7085940bed32a118888c0e1920ecb73f49f5fa
+DIST cnijfilter-common-2.80-1.tar.gz 5481249 RMD160 e4ef250efebcffbe86b7ea6783f31d1d2981ccf9 SHA1 84784b63a39771e2453b24a557cf328702d4b37b SHA256 175355c9cfcedfc1d8f4af30faffb2a5233db70aa767901990db2019229f64e1
 DIST cnijfilter-common-3.00-1.tar.gz 6207050 RMD160 c8a4dedb0ac4ad7ab411434a99d13635e1790ec3 SHA1 55bab2efbc73027f17acda802fc0054ad89e56d7 SHA256 f0cf09c2cbd801e65f0e6388889a4ac6efbc0f832799864314e67f14ff7da56d
 DIST cnijfilter-source-3.20-1.tar.gz 6494749 RMD160 7bd45b55b324e26535962b740506fbd8fb0866d4 SHA1 1221441ef6c6a055e634f0e931bed8de55a4f7a6 SHA256 2fc4dcd79d6644baeb0c8a0ee1b43dc9f59f44d21f773c0d85bfe2660a180b9a
 EBUILD cnijfilter-2.70-r1.ebuild 7175 RMD160 1a45f80e428e7e005fff6936f9b28dd478c5d73d SHA1 b559ee24898fd3b0823ea699fdf849350b423b5e SHA256 91fbe5d4a42ca6f788f9f9cc11c9adae534401f19564b81c69aaefcde43d1d97
+EBUILD cnijfilter-2.80-r1.ebuild 7110 RMD160 899e77849641026ba15c5a99156a0ef01ec62c1b SHA1 dec6ebfa4487899bc32d7d2b1a1f2acd86702199 SHA256 6304ccb97a383019f15efadefe8c781815cc0412cdbde63ebfdcae34166bd7a8
 EBUILD cnijfilter-3.00.ebuild 7794 RMD160 30c77972ee25b61aa7b585a900d70ee437e96096 SHA1 717e7b4fccd6567dd9f86b8fd59bc7e5407d8c56 SHA256 bffcc45cc4a3968ebed316e6b72edb46ed29e0121395f13140a31411db4f487a
 EBUILD cnijfilter-3.20-r1.ebuild 7453 RMD160 847b041720feb49d595fad70002bc15a2346038f SHA1 61fe3251bbc2070b5498dbb8f2ffa006c3f18613 SHA256 a1a1513ab355dde729caea81df49cb4ca4b310cf296f73911ea4cbf203f84fc4
-MISC ChangeLog 385 RMD160 198af67a7958649725a7c2dd416b2d55dcc51676 SHA1 aae0131b3015c084b1f9d066c7215a6b8e6e3c46 SHA256 d096770aee2a7fb1ce1b5a543116fa91cdaa3d46b5573125473d02367aa056d0
+MISC ChangeLog 540 RMD160 e9ede5b62bb3c25596f70c71413bc870273526fb SHA1 8a6ba7b4da329513c3be4602d5f0d46136feb0ea SHA256 d36692116cf4417ca0a7e2364f26478aa13933fa8f423211117c1569e3c1f0b8
